--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,22 +2,74 @@
   "menus": {
     "main": {
       "title": "Главное меню",
-      "settingsBtn": "⚙️ Settings",
-      "aboutBtn": "❓ About",
-      "aboutText": "Hey! First of all, thanks for activating me!\n\nHave you ever had a moments when you see a trailer of cool movie and give yourself a promise to watch it? Then it appears to be 2 or 3 months until the release of this movie and you simply forget about it..\n\nMy author was in such situation quite a lot of time. And that's exactly why he created me. My name is Eve and I help him to track any movies he wants - as soon as they're available on torrents, I'm sending him a message about it and he never forgets to watch them anymore. I can help you with it as well! Just go search for a movie and add it to your collection and I'll write you back once you can watch it! If you want to check my source code, you could do it right here: https://github.com/dmbaranov/evemovies-bot",
-      "contactBtn": "✍️ Contact",
-      "contactQuestion": "🤔 Here you can leave a message for the Creator! Be wise though, try to express your minds fully and clearly within one message!",
-      "contactFailText": "❌ Your message not sent. Use only text please.",
-      "contactSuccessText": "📬 Your message has been delivered!"
+      "settingsBtn": "⚙️ Настройки",
+      "helpBtn": "💬 Помощь",
+      "helpText": "Скоро тут будет помощь...",
+      "contactBtn": "✍️ Обратная связь",
+      "contactQuestion": "🤔 Здесь вы можете оставить сообщение автору бота. Пожалуйста постарайтесь выразить мысль ввиде одного сообщения.",
+      "contactFailText": "❌ Ваше сообщение не отправлено. Используйте только текст пожалуйста.",
+      "contactSuccessText": "📬 Ваше сообщение доставлено, спасибо!",
+      "botsBtn": "Управление ботами",
+      "sourcesBtn": "Управление источниками",
+      "howToAddChannelBtn": "❓Как добавить канал",
+      "howToAddChannelText": "Чтобы добавить канал перешлите любое сообщение из него в этот чат.\n\nКанал будет добавлен только в том случае если один из ваших ботов является его администратором.\n\nПоддерживаются как приватные так и публичные каналы."
     },
     "settings": {
-      "title": "⚙️ Settings",
-      "changeLanguageBtn": "Change language",
-      "changeLanguageText": "Language has been changed!"
+      "title": "⚙️ Настройки",
+      "changeLanguageBtn": "🌎 Изменить язык",
+      "changeLanguageText": "✅ Язык изменен"
+    },
+    "bots": {
+      "title": "Управление ботами",
+      "selectBtn": "${botName} (${sources})",
+      "howToAddBtn": "❓Как добавить бота",
+      "howToAddText": "Чтобы добавить бота перешлите сообщение содержащее его токен от @BotFather",
+      "addFailText": "❌ Ошибка, бот не добавлен",
+      "addSuccessText": "✅ Бот ${botName} добавлен, теперь можно добавить источники и каналы"
+    },
+    "bot": {
+      "title": "Управление ботом",
+      "deleteBtn": "🗑 Удалить",
+      "deleteSuccessText": "✅ Бот удален",
+      "deleteFailText": "❌ Ошибка, бот не удален",
+      "channelsBtn": "Управление каналами"
+    },
+    "sources": {
+      "title": "Управление каналами",
+      "botSelectBtn": "Работать над ${botName} (${sources})",
+      "sourcesListBtn": "Посмотреть источники для бота ${botName}"
+    },
+    "sourcesList": {
+      "title": "Источники для ${botName}",
+      "sourceSelectBtn": "${sourceName} (${sourceType})",
+      "addRssBtn": "Добавить RSS",
+      "addRssQuestion": "Введите имя нового источника и его адрес через пробел",
+      "addRssFailText": "❌ Ошибка, источник не добавлен",
+      "addRssSuccessText": "✅ Источник добавлен",
+      "invalidSourceName": "❌ Недопустимое имя источника \"${sourceName}\", оно должно не менее 3 и не более 32 символов",
+      "invalidSourceUrl": "❌ Не могу получить адрес источника из вашего ответа",
+      "invalidSourceRecords": "❌ Не могу найти источник данного типа по вашему адресу \"${url}\""
+    },
+    "source": {
+      "title": "Управление источниками",
+      "deleteBtn": "🗑 Удалить источник",
+      "deleteSuccessText": "✅ Источник удален",
+      "deleteFailText": "❌ Ошибка, источник не удален"
+    },
+    "channels": {
+      "title": "Управление каналами"
+    },
+    "channel": {
+      "title": "Управление каналами",
+      "deleteBtn": "✅ Удалить канал",
+      "addSuccessText": "Канал ${channelName} добавлен для бота ${botName}",
+      "addFailText": "❌ Ошибка, канал не добавлен",
+      "deleteSuccessText": "✅ Канал удален",
+      "deleteFailText": "❌ Ошибка, канал не удален"
     }
   },
   "shared": {
-    "backBtn": "...Back",
-    "backToMainBtn": "Back to main menu"
+    "backBtn": "◀️ Назад",
+    "backToMainBtn": "В главное меню"
   }
 }
