--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,6 +10,7 @@
       "contactFailText": "❌ Ваше сообщение не отправлено. Используйте только текст пожалуйста.",
       "contactSuccessText": "📬 Ваше сообщение доставлено, спасибо!",
       "botsBtn": "Управление ботами",
+      "adminBtn": "Панель администратора",
       "sourcesBtn": "Управление источниками",
       "howToAddChannelBtn": "❓Как добавить канал",
       "howToAddChannelText": "Чтобы добавить канал перешлите любое сообщение из него в этот чат.\n\nКанал будет добавлен только в том случае если один из ваших ботов является его администратором.\n\nПоддерживаются как приватные так и публичные каналы."
@@ -66,6 +67,11 @@
       "addFailText": "❌ Ошибка, канал не добавлен",
       "deleteSuccessText": "✅ Канал удален",
       "deleteFailText": "❌ Ошибка, канал не удален"
+    },
+    "admin": {
+      "title": "Панель администратора",
+      "statBtn": "Статистика",
+      "statText": "Пользователи - ${usersCount}\nИсточники - ${sourcesCount}\nКаналы - ${channelsCount}\nБоты - ${botsCount}\n\nТОП источников:\n${topSourcesString}"
     }
   },
   "shared": {
