--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,16 +4,13 @@
       "title": "Главное меню",
       "settingsBtn": "⚙️ Настройки",
       "helpBtn": "💬 Помощь",
-      "helpText": "Скоро тут будет помощь...",
       "contactBtn": "✍️ Обратная связь",
       "contactQuestion": "🤔 Здесь вы можете оставить сообщение автору бота. Пожалуйста постарайтесь выразить мысль ввиде одного сообщения.",
       "contactFailText": "❌ Ваше сообщение не отправлено. Используйте только текст пожалуйста.",
       "contactSuccessText": "📬 Ваше сообщение доставлено, спасибо!",
       "botsBtn": "Управление ботами",
       "adminBtn": "Панель администратора",
-      "sourcesBtn": "Управление источниками",
-      "howToAddChannelBtn": "❓Как добавить канал",
-      "howToAddChannelText": "Чтобы добавить канал перешлите любое сообщение из него в этот чат.\n\nКанал будет добавлен только в том случае если один из ваших ботов является его администратором.\n\nПоддерживаются как приватные так и публичные каналы."
+      "sourcesBtn": "Управление источниками"
     },
     "settings": {
       "title": "⚙️ Настройки",
@@ -23,18 +20,16 @@
     "bots": {
       "title": "Управление ботами",
       "selectBtn": "${botName}",
-      "howToAddBtn": "❓Как добавить бота",
-      "howToAddText": "Чтобы добавить бота перешлите сообщение содержащее его токен от @BotFather",
       "addFailText": "❌ Ошибка, бот не добавлен",
       "addFailAlreadyExistsText": "❌ Ошибка, бот ${botName} уже добавлен",
       "addSuccessText": "✅ Бот ${botName} добавлен, теперь можно добавить источники и каналы"
     },
     "bot": {
-      "title": "Управление ботом",
-      "deleteBtn": "🗑 Удалить",
+      "title": "Управление ботом ${botName}",
+      "deleteBtn": "🗑 Удалить бота",
       "deleteSuccessText": "✅ Бот удален",
       "deleteFailText": "❌ Ошибка, бот не удален",
-      "channelsBtn": "Управление каналами"
+      "channelsBtn": "Каналы"
     },
     "sources": {
       "title": "Управление каналами",
@@ -63,14 +58,21 @@
     },
     "channel": {
       "title": "Управление каналами",
-      "deleteBtn": "✅ Удалить канал",
-      "addSuccessText": "Канал ${channelName} добавлен",
+      "deleteBtn": "🗑 Удалить канал",
+      "addSuccessText": "✅ Канал ${channelName} добавлен",
       "addFailAdminBotText": "❌ Ошибка, ни один из ваших ботов не является администратором ${channelName} канала",
       "addFailAlreadyExistsText": "❌ Ошибка, канал ${channelName} уже добавлен",
       "addFailNoBotsText": "❌ Ошибка, вначале вам нужно добавить хотя бы одного бота",
       "addFailText": "❌ Ошибка, канал не добавлен",
       "deleteSuccessText": "✅ Канал удален",
       "deleteFailText": "❌ Ошибка, канал не удален"
+    },
+    "help": {
+      "title": "Помощь",
+      "howToAddChannelBtn": "❓Как добавить канал",
+      "howToAddChannelText": "Чтобы добавить канал перешлите любое сообщение из него в этот чат.\n\nКанал будет добавлен только в том случае если один из ваших ботов является его администратором.\n\nПоддерживаются как приватные так и публичные каналы.",
+      "howToAddBotBtn": "❓Как добавить бота",
+      "howToAddBotText": "Чтобы добавить бота перешлите сообщение содержащее его токен от @BotFather"
     },
     "admin": {
       "title": "Панель администратора",
